--- a/public/style.css
+++ b/public/style.css
@@ -162,6 +162,203 @@ hr {
   height: auto; /* Mostrar detalles al pasar el mouse por encima */
 }
 
+#cine-container {
+  margin-top: 20px;
+}
+
+.cine-container {
+  background-color: #353535;
+  padding: 20px;
+  margin: 20px auto;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+}
+
+.cine-container h3 {
+  color: #cf0000;
+  margin-bottom: 10px;
+  font-size: 1.5em;
+}
+
+.cine-container p {
+  margin-bottom: 10px;
+  font-size: 1.2em; 
+}
+
+
+#comentario-form {
+  background-color: black; 
+  color: #fff; 
+  padding: 20px;
+  border-radius: 10px; 
+  margin: 20px auto; 
+  width: 600px; 
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); 
+  border: 2px solid #353535; 
+}
+
+#comentario-form label, 
+#comentario-form input {
+  display: block;
+  margin-bottom: 10px;
+}
+
+#comentario-form input {
+  padding: 10px;
+  border: none;
+  border-radius: 3px;
+  width: calc(100% - 20px);
+}
+
+#comentario-form button {
+  background-color: #d9534f; 
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+#comentario-form button:hover {
+  background-color: #cf0a0a; 
+}
+
+.comment {
+  background-color: #444; 
+  color: #fff; 
+  padding: 10px;
+  border-radius: 5px;
+  margin: 10px 0;
+}
+
+#comments-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); 
+  gap: 20px; 
+  margin-top: 20px; 
+}
+
+.comment {
+  background-color: #cf0a0a; 
+  color: #fff; 
+  padding: 20px; 
+  border-radius: 5px; 
+  text-align: center; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center; 
+  height: 250px; 
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
+  border: 1px solid #cf0000; 
+  word-wrap: break-word; 
+}
+
+.comment h4, .comment h5 {
+  font-weight: bold; 
+  margin-bottom: 10px; 
+}
+
+.comment h5 {
+  font-size: 1.2em; 
+}
+
+.comment p {
+  font-size: 1.2em; 
+  margin-top: 10px; 
+  background-color: rgba(255, 0, 0, 0.479);
+  padding: 10px; 
+  border-radius: 5px; 
+}
+
+#comment-form {
+  background-color: black; 
+  color: #fff; 
+  padding: 20px;
+  border-radius: 10px; 
+  margin: 20px auto; 
+  width: 600px; 
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); 
+  border: 2px solid #353535; 
+}
+
+
+#comment-form label, 
+#comment-form input {
+  display: block;
+  margin-bottom: 10px;
+  width: 100%; 
+}
+
+#comment-form input {
+  padding: 10px;
+  border: none;
+  border-radius: 3px;
+  width: calc(100% - 20px); 
+  background-color: #fff; 
+  color: #333; 
+}
+
+#comment-form button {
+  background-color: #ff4747; 
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 3px;
+  cursor: pointer;
+  width: 100%; 
+}
+
+#comment-form button:hover {
+  background-color: #cf0a0a; 
+}
+#comentarioPeli-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); 
+  gap: 20px; 
+  margin-top: 20px; 
+}
+
+.comentario {
+  background-color: #cf0a0a; 
+  color: #fff; 
+  padding: 20px; 
+  border-radius: 5px; 
+  text-align: center; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center; 
+  height: 250px; 
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
+  border: 1px solid #cf0000; 
+  word-wrap: break-word; 
+}
+
+.comentario h4, .comentario h5 {
+  font-weight: bold; 
+  margin-bottom: 10px; 
+}
+
+.comentario h5 {
+  font-size: 1.2em; 
+}
+
+.comentario p {
+  font-size: 1.2em; 
+  margin-top: 10px; 
+  background-color: rgba(255, 0, 0, 0.479); 
+  padding: 10px; 
+  border-radius: 5px; 
+}
+
+
 .footer {
   display: flex;
   justify-content: space-between;
